# datawagon-transform

./: .gitignore  .sqlfluff  dbt_project.yml  pyproject.toml
macros/: clean_channel_id.sql  date_key_to_date.sql
models/marts/: _exposures.yml  _models.yml  daily_channel_revenue.sql  missing_acid.sql  monthly_channel_revenue.sql  prev__monthly_channel_revenue.sql
models/source/: _models.yml  _source.yml  stg__longs__asset__ad_rev.sql  stg__longs__asset__ad_rev_adj.sql  stg__longs__asset__sub_rev.sql  stg__longs__claim__ad_rev.sql  stg__longs__claim__ad_rev_adj.sql  stg__longs__music_asset__sub_rev.sql  stg__longs__music_video__sub_rev.sql  stg__longs__video__ad_rev.sql  stg__longs__video__ad_rev_adj.sql  stg__longs__video__sub_rev.sql  stg__shorts__video__ad_rev.sql  stg__shorts__video__sub_rev.sql
models/staging/: _models.yml  _source.yml  stg__longs__asset__ad_rev.sql  stg__longs__asset__ad_rev_adj.sql  stg__longs__asset__sub_rev.sql  stg__longs__claim__ad_rev.sql  stg__longs__claim__ad_rev_adj.sql  stg__longs__music_asset__sub_rev.sql  stg__longs__music_video__sub_rev.sql  stg__longs__video__ad_rev.sql  stg__longs__video__ad_rev_adj.sql  stg__longs__video__sub_rev.sql  stg__shorts__video__ad_rev.sql  stg__shorts__video__sub_rev.sql
models/staging/channels/: stg__channel_id_on_date.sql
models/staging/keep/: stg__adj_claim_raw__channel_revenue.sql  stg__asset_raw__channel_revenue.sql  stg__longs_ads__channel_revenue__monthly.sql  stg__longs_ads__channel_revenue_adj.sql  stg__subscription_music.sql  stg__subscription_non_music.sql
(+9 files in other folders)
